--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-1-7-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-1-7-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、美国、日本、香港、韩国、欧洲、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-01-06">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-1-6-node-share.htm" class="xcblog-blog-url">
@@ -319,16 +333,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
+                        <li class="py-2"><a href="/news/article-35254.htm" title="动物疫苗上市企业排名（动物疫苗上市企业排名）">动物疫苗上市企业排名（动物疫苗上市企业排名）</a></li>
                         <li class="py-2"><a href="/news/article-33574.htm" title="Vue中引入静态资源的几种方式">Vue中引入静态资源的几种方式</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-32149.htm" title="猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）">猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）</a></li>
+                        <li class="py-2"><a href="/news/article-36928.htm" title="成都宠物领养平台领养可靠吗安全吗知乎文章（成都宠物领养平台领养可靠吗安全吗知乎文章）">成都宠物领养平台领养可靠吗安全吗知乎文章（成都宠物领养平台领养可靠吗安全吗知乎文章）</a></li>
+                        <li class="py-2"><a href="/news/article-35797.htm" title="东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）">东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）</a></li>
                         <li class="py-2"><a href="/news/article-34044.htm" title="制作狗粮机器多少钱一套（自制狗粮机）">制作狗粮机器多少钱一套（自制狗粮机）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-2-free-node-subscribe-links.htm" title="1月2日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">1月2日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-26-node-share-links.htm" title="12月26日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">12月26日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-30244.htm" title="动物疫苗接种时间查询app 动物疫苗查询系统">动物疫苗接种时间查询app 动物疫苗查询系统</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-30-node-share-links.htm" title="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-1-free-node-subscribe.htm" title="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-4-free-node-subscribe.htm" title="1月4日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月4日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
+                        <li class="py-2"><a href="/news/article-35255.htm" title="狗粮批发厂家联系方式查询（狗粮厂家批发中心）">狗粮批发厂家联系方式查询（狗粮厂家批发中心）</a></li>
+                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
                     </ul>
     </div>
 </div>
@@ -340,7 +354,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
